objects/UpgradePlan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Upgrade Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UpgradePlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrade Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>